--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "bootstrap": "5.1.3",
-    "vue": "^3.2.33"
+    "vue": "^3.2.33",
+    "vue-router": "4.0.15"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
