--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/lodash": "4.14.182",
+    "axios": "0.27.2",
     "bootstrap": "5.1.3",
+    "lodash": "4.17.21",
     "vue": "^3.2.33",
     "vue-router": "4.0.15"
   },
