--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/axios-token-interceptor": "0.2.3",
     "@types/lodash": "4.14.182",
     "axios": "0.27.2",
     "bootstrap": "5.1.3",
